css/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');

html {
  margin: 0px;
  background-color: #190A33;

}
body{
  margin: 5%;
}

html, body, p, h1, img{
  max-width: 100%;
}

h4, h5, h6, p{
  font-family: Arial, sans-serif;
  color: #FBF7EE;
}

h1, h2, h3{
  font-family: 'Poppins', Arial, sans-serif;
  color: #FBF7EE;
}

h1{
  font-size: 3em;
}

h2{
  margin: 0;
}

img{
  border-radius: 15px;
}

a{
  color: #FBF7EE;
}

a:hover{
  /* color: #ffe092; */
  color: #fad98d;
}

table {
  border-collapse: collapse;
  text-indent: 0%;
  border-spacing: 0cap;
}


/* Add-on classes */

.main{
  /* background-color: #948994; */
  background-color: #b489ff;
}

.center-text{
  text-align: center;
}

.navigation-link{
  padding-left: 20%;
  padding-right: 20%;
}

.portfolio-text{
  margin: 0%;
}

.contact-text{
  max-width: fit-content;
  padding-left: 2%;
  padding-right: 2%;
}

.flex-display{
  display:flex;
}

.inline-flex{
  display: inline-flex;
}

.subheader{
  width: 33.3333333%;
  display:flex;
}

.left{
  justify-content: left;
}

.right{
  justify-content: right;
}

.center{
  justify-content: center;
}

.text-decoration-none{
  text-decoration: none;
}

.width-70{
  max-width: 70%
}

.max-width-100{
  max-width: 100%
}

.width-100{
  width:100%;
}
.width-50{
  width: 50%;
}

.width-40{
  width: 40%
}

.width-30{
  width: 30%
}
.min-width-100{
  min-width: 100;
}

.width-80{
  width: 80%;
}

.height-100vh{
  height: 100vh;
}

.padding-2{
  padding: 2%;
}

.padding-bottom-0{
  padding-bottom: 0%;
}

.padding-top-0{
  padding-top: 0%;
}

.padding-none{
  padding: 0%;
}

.padding-left-3{
  padding-left: 3%;
}

.padding-right-3{
  padding-right: 3%;
}

.margin-0{
  margin: 0px;
}

.margin-top-

.on-hover-clickable :hover{
  color:#3b324a;
}

/* Items by ids */
#bio-text{
  font-size: 1rem;
}

#top-bar{
  background-color:#190A33;
  position: sticky;
  top: 0;

  z-index: 1;
}

#title{
  margin-bottom: 0%;
  text-align: center;

  font-size: 2em;
  color: #FBF7EE;
}

.sidebar {
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  background-color: #111;
  padding-top: 60px;

}

.sidebar a {
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 100%;
  color: #818181;
  display: block;
}

.sidebar a:hover {
  color: #f1f1f1;
}

